<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.PokemonDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/pikachu"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/height"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/weight"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/type"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tvWeakness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/weakness"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerWeakness"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/prev_evolution"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerPrev"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/next_evolution"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerNext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgPokemon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_thumbnail" />

</RelativeLayout>